# energy-forecasting

./: .env.default  .gitignore  LICENSE  README.md  README_CICD.md  README_DEPLOY.md  README_notes.md  create_feature_view.py  docker-compose.yml  energy_consumption_data.parquet  environment.yml  export_to_feature_store.py  pyproject.toml
airflow/: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
airflow/dags/: .env.default  example.py  feature_pipeline-0.1.0-py3-none-any.whl  feature_pipeline_dag.py  ml_pipeline_dag.py  process-employees.py  training_pipeline-0.1.0-py3-none-any.whl  training_pipeline_dag.py
airflow/dags/sql/: employees_schema.sql  employees_temp_schema.sql
app-api/: .env.default  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
app-api/api/: __main__.py  application.py  config.py  main.py  views.py
app-api/api/schemas/: __init__.py  area_values.py  consumer_type_values.py  health.py  predictions.py
app-frontend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app-frontend/frontend/: components.py  main.py  settings.py
app-monitoring/: Dockerfile  README.md  pyproject.toml  requirements.txt
app-monitoring/.streamlit/: config.toml
app-monitoring/monitoring/: components.py  main.py  settings.py
batch-prediction-pipeline/: .env.default  README.md  predict.py  pyproject.toml  settings.py  utils.py
batch-prediction-pipeline/batch_prediction_pipeline/: batch.py  data.py  monitoring.py  predict.py  settings.py  utils.py
feature-pipeline/: .airflowignore  .env.default  README.md  cleaning.py  create_feature_view.py  dag.py  data_exporter.py  data_loader.py  data_validation.py  environment.yml  extract.py  feature_pipeline.py  load.py  preprocessing.py  pyproject.toml  run_feature_pipeline.py  settings.py  utils.py  validation.py
feature-pipeline/dags/: dag.py
feature-pipeline/feature_pipeline/: __init__.py  clean_feature_store.py  create_feature_view.py  feature_view.py  pipeline.py  run_feature_pipeline.py  settings.py  utils.py
feature-pipeline/feature_pipeline/etl/: __init__.py  cleaning.py  extract.py  load.py  validation.py
training-pipeline/: .env.default  README.md  data.py  hyperparameter_tuning.py  log_best_model.py  models.py  preprocess.py  pyproject.toml  settings.py  train.py  transformers.py  upload_best_model.py  utils.py
training-pipeline/training_pipeline/: __init__.py  best_config.py  data.py  hyperparameter_tuning.py  models.py  settings.py  train.py  transformers.py  upload_best_model.py  utils.py
training-pipeline/training_pipeline/configs/: __init__.py  gridsearch.py
training-pipeline/wandb/: latest-run
training-pipeline/wandb/run-20230216_083743-7jqc0xst/: run-7jqc0xst.wandb
training-pipeline/wandb/run-20230216_083858-2f4mm6u6/: run-2f4mm6u6.wandb
training-pipeline/wandb/run-20230216_084754-smbpcpim/: run-smbpcpim.wandb
training-pipeline/wandb/run-20230216_084802-nat798c9/: run-nat798c9.wandb
training-pipeline/wandb/run-20230216_084815-6g3pccc7/: run-6g3pccc7.wandb
training-pipeline/wandb/run-20230216_091907-obdegl4f/: run-obdegl4f.wandb
training-pipeline/wandb/run-20230216_091912-ljvsuekr/: run-ljvsuekr.wandb
training-pipeline/wandb/run-20230216_091920-18z2j9fe/: run-18z2j9fe.wandb
training-pipeline/wandb/run-20230216_094757-axlst7ze/: run-axlst7ze.wandb
training-pipeline/wandb/run-20230216_094803-f25chuds/: run-f25chuds.wandb
training-pipeline/wandb/run-20230216_094912-wurmidm5/: run-wurmidm5.wandb
training-pipeline/wandb/run-20230216_094917-lviy0rr1/: run-lviy0rr1.wandb
training-pipeline/wandb/run-20230216_095049-ixwhohox/: run-ixwhohox.wandb
training-pipeline/wandb/run-20230216_095055-yjlft3zk/: run-yjlft3zk.wandb
training-pipeline/wandb/run-20230216_095105-15jnnqib/: run-15jnnqib.wandb
training-pipeline/wandb/run-20230216_095321-jobk3ogw/: run-jobk3ogw.wandb
training-pipeline/wandb/run-20230216_095327-xenk005d/: run-xenk005d.wandb
training-pipeline/wandb/run-20230216_095337-kv6njvrv/: run-kv6njvrv.wandb
training-pipeline/wandb/run-20230216_095347-idkxlvs8/: run-idkxlvs8.wandb
training-pipeline/wandb/run-20230216_095358-kl1dhrt6/: run-kl1dhrt6.wandb
training-pipeline/wandb/run-20230217_103633-fuycfado/: run-fuycfado.wandb
training-pipeline/wandb/run-20230217_103638-fuycfado/: run-fuycfado.wandb
training-pipeline/wandb/run-20230217_103646-fuycfado/: run-fuycfado.wandb
training-pipeline/wandb/run-20230217_103659-ey47748r/: run-ey47748r.wandb
training-pipeline/wandb/run-20230217_103704-ey47748r/: run-ey47748r.wandb
training-pipeline/wandb/run-20230217_103712-ey47748r/: run-ey47748r.wandb
training-pipeline/wandb/run-20230217_103726-qfir8itd/: run-qfir8itd.wandb
training-pipeline/wandb/run-20230217_103732-qfir8itd/: run-qfir8itd.wandb
training-pipeline/wandb/run-20230217_103741-qfir8itd/: run-qfir8itd.wandb
training-pipeline/wandb/run-20230217_103850-9mqp2ont/: run-9mqp2ont.wandb
training-pipeline/wandb/run-20230217_103855-9mqp2ont/: run-9mqp2ont.wandb
training-pipeline/wandb/run-20230217_103903-9mqp2ont/: run-9mqp2ont.wandb
training-pipeline/wandb/run-20230217_103944-uve63w22/: run-uve63w22.wandb
training-pipeline/wandb/run-20230217_103949-uve63w22/: run-uve63w22.wandb
training-pipeline/wandb/run-20230217_103957-uve63w22/: run-uve63w22.wandb
training-pipeline/wandb/run-20230217_104022-aiupnbmd/: run-aiupnbmd.wandb
training-pipeline/wandb/run-20230217_104026-aiupnbmd/: run-aiupnbmd.wandb
training-pipeline/wandb/run-20230217_104112-tomcc0q8/: run-tomcc0q8.wandb
training-pipeline/wandb/run-20230217_104116-tomcc0q8/: run-tomcc0q8.wandb
training-pipeline/wandb/run-20230217_104124-tomcc0q8/: run-tomcc0q8.wandb
training-pipeline/wandb/run-20230217_104148-xmjqp9j3/: run-xmjqp9j3.wandb
training-pipeline/wandb/run-20230217_104153-xmjqp9j3/: run-xmjqp9j3.wandb
training-pipeline/wandb/run-20230217_104201-xmjqp9j3/: run-xmjqp9j3.wandb
training-pipeline/wandb/run-20230217_104225-nagdt0l8/: run-nagdt0l8.wandb
training-pipeline/wandb/run-20230217_104230-nagdt0l8/: run-nagdt0l8.wandb
(+1145 files in other folders)
