[tool.poetry]
name = "energy-forecasting"
version = "0.1.0"
description = ""
authors = [
"Paul Iusztin <paul.lusztin@coreai.ai>",
"Kurtis Pykes <kurtispykes@gmail.com>" 
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
