[tool.poetry]
name = "energy-forecasting"
version = "0.1.0"
description = ""
authors = [
"Paul Iusztin <paul.lusztin@coreai.ai>",
"Kurtis Pykes <kurtispykes@gmail.com>" 
]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
pandas = "^1.5.3"
lightgbm = "^3.3.5"
fire = "^0.5.0"
pyarrow = "^11.0.0"
tqdm = "^4.64.1"
category-encoders = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
