[tool.poetry]
name = "app-api"
version = "0.1.0"
description = ""
authors = ["Iusztin Paul <p.e.iusztin@gmail.com>", "Kurtis Pykes <kurtispykes@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "~3.9"
pandas = ">=1.5.3,<1.6.0"
uvicorn = ">=0.21.0,<0.22.0"
fastapi = ">=0.94.1,<0.95.0"
pydantic = ">=1.10.6,<1.11.0"
pyarrow = ">=11.0.0,<11.1.0"
gcsfs = "2023.3.0"
python-dotenv = "0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
