[tool.poetry]
name = "batch-prediction-pipeline"
version = "0.1.0"
description = ""
authors = [
"Paul Iusztin <paul.lusztin@coreai.ai>",
"Kurtis Pykes <kurtispykes@gmail.com>"
]
readme = "README.md"
packages = [{include = "batch_prediction_pipeline"}]

[tool.poetry.dependencies]
python = "~3.9"
category-encoders = "^2.6.0"
hopsworks = "^3.0.5"
python-dotenv = "^1.0.0"
lightgbm = "^3.3.5"
sktime = "^0.16.1"
google-cloud-storage = "^2.7.0"
fire = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
