[tool.poetry]
name = "batch-prediction-pipeline"
version = "0.1.0"
description = ""
authors = ["Iusztin Paul <p.e.iusztin@gmail.com>"]
readme = "README.md"
packages = [{include = "batch_prediction_pipeline"}]

[tool.poetry.dependencies]
python = "~3.9"
category-encoders = "^2.6.0"
hopsworks = "^3.0.5"
python-dotenv = "^1.0.0"
lightgbm = "^3.3.5"
sktime = "^0.16.1"
google-cloud-storage = "^2.7.0"
fire = "^0.5.0"
# training_pipeline = { file = "wheels/training_pipeline-0.1.0-py3-none-any.whl" }
training-pipeline = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"  # This name will be used in the configuration to retreive the proper credentials
url = "http://localhost"  # URL used to download your packages from
